3968.	[bug]		Silence spurious log messages when using 'named -[46]'.
			[RT #37308]

3967.	[test]		Add test for inlined signed zone in multiple views
			with different DNSKEY sets. [RT #35759]

3966.	[bug]		Missing dns_db_closeversion call in receive_secure_db.
			[RT #35746]

3965.	[func]		Log outgoing packets and improve packet logging to
			support logging the remote address. [RT #36624]

3964.	[func]		nsupdate now performs check-names processing.
			[RT #36266]

3963.	[test]		Added NXRRSET test cases to the "dlzexternal"
			system test. [RT #37344]

3962.	[bug]		'dig +topdown +trace +sigchase' address unhandled error
			conditions. [RT #34663]

3961.	[bug]		Forwarding of SIG(0) signed UPDATE messages failed with
			BADSIG.  [RT #37216]

3960.	[bug]		'dig +sigchase' could loop forever. [RT #37220]

3959.	[bug]		Updates could be lost if they arrived immediately
			after a rndc thaw. [RT #37233]

3958.	[bug]		Detect when writeable files have multiple references
			in named.conf. [RT #37172]

3957.	[bug]		"dnssec-keygen -S" failed for ECCGOST, ECDSAP256SHA256
			and ECDSAP384SHA384. [RT #37183]

3956.	[func]		Notify messages are now rate limited by notify-rate and
			startup-notify-rate instead of serial-query-rate.
			[RT #24454]

3955.	[bug]		Notify messages due to changes are no longer queued
			behind startup notify messages. [RT #24454]

3954.	[bug]		Unchecked mutex init in dlz_dlopen_driver.c [RT #37112]

3953.	[bug]		Don't escape semi-colon in TXT fields. [RT #37159]

3952.	[bug]		dns_name_fullcompare failed to set *nlabelsp when the
			two name pointers were the same. [RT #37176]

3951.	[func]		Add the ability to set yet-to-be-defined EDNS flags
			to dig (+ednsflags=#). [RT #37142]

3950.	[port]		Changed the bin/python Makefile to work around a
			bmake bug in FreeBSD 10 and NetBSD 6. [RT #36993]

3949.	[experimental]	Experimental support for draft-andrews-edns1 by sending
			EDNS(1) queries (define DRAFT_ANDREWS_EDNS1 when