@@ -711,10 +711,17 @@ setup_dnsseckeys(dns_client_t *client) {
 #endif
 	}
 
-	if (trust_anchor == NULL)
+	if (trust_anchor == NULL) {
 		trust_anchor = isc_mem_strdup(mctx, ".");
-	if (dlv_anchor == NULL)
+		if (trust_anchor == NULL)
+			fatal("out of memory");
+	}
+
+	if (dlv_anchor == NULL) {
 		dlv_anchor = isc_mem_strdup(mctx, "dlv.isc.org");
+		if (dlv_anchor == NULL)
+			fatal("out of memory");
+	}
 
 	CHECK(convert_name(&afn, &anchor_name, trust_anchor));
 	CHECK(convert_name(&dfn, &dlv_name, dlv_anchor));
@@ -1026,8 +1033,11 @@ plus_option(char *option) {
 			if (state && no_sigs)
 				break;
 			dlv_validation = state;
-			if (value != NULL)
+			if (value != NULL) {
 				dlv_anchor = isc_mem_strdup(mctx, value);
+				if (dlv_anchor == NULL)
+					fatal("out of memory");
+			}
 			break;
 		case 'n': /* dnssec */
 			FULLCHECK("dnssec");
@@ -1059,8 +1069,11 @@ plus_option(char *option) {
 			if (state && no_sigs)
 				break;
 			root_validation = state;
-			if (value != NULL)
+			if (value != NULL) {
 				trust_anchor = isc_mem_strdup(mctx, value);
+				if (trust_anchor == NULL)
+					fatal("out of memory");
+			}
 			break;
 		case 'r': /* rrcomments */
 			FULLCHECK("rrcomments");
@@ -1231,6 +1244,8 @@ dash_option(char *option, char *next, isc_boolean_t *open_type_class) {
 	switch (opt) {
 	case 'a':
 		anchorfile = isc_mem_strdup(mctx, value);
+		if (anchorfile == NULL)
+			fatal("out of memory");
 		return (value_from_next);
 	case 'b':
 		hash = strchr(value, '#');
@@ -1289,11 +1304,13 @@ dash_option(char *option, char *next, isc_boolean_t *open_type_class) {
 		port = value;
 		return (value_from_next);
 	case 'q':
-		if (qname != NULL) {
+		if (curqname != NULL) {
 			warn("extra query name");
-			isc_mem_free(mctx, qname);
+			isc_mem_free(mctx, curqname);
 		}
-		curqname = value;
+		curqname = isc_mem_strdup(mctx, value);
+		if (curqname == NULL)
+			fatal("out of memory");
 		return (value_from_next);
 	case 't':
 		*open_type_class = ISC_FALSE;
@@ -1316,9 +1333,13 @@ dash_option(char *option, char *next, isc_boolean_t *open_type_class) {
 		result = get_reverse(textname, sizeof(textname), value,
 				     ISC_FALSE);
 		if (result == ISC_R_SUCCESS) {
-			if (curqname != NULL)
+			if (curqname != NULL) {
+				isc_mem_free(mctx, curqname);
 				warn("extra query name");
+			}
 			curqname = isc_mem_strdup(mctx, textname);
+			if (curqname == NULL)
+				fatal("out of memory");
 			if (typeset)
 				warn("extra query type");
 			qtype = dns_rdatatype_ptr;
@@ -1426,8 +1447,11 @@ parse_args(int argc, char **argv) {
 				}
 			}
 
-			if (curqname == NULL)
-				curqname = argv[0];
+			if (curqname == NULL) {
+				curqname = isc_mem_strdup(mctx, argv[0]);
+				if (curqname == NULL)
+					fatal("out of memory");
+			}
 		}
 	}
 
@@ -1440,10 +1464,13 @@ parse_args(int argc, char **argv) {
 
 	if (curqname == NULL) {
 		qname = isc_mem_strdup(mctx, ".");
+		if (qname == NULL)
+			fatal("out of memory");
+
 		if (!typeset)
 			qtype = dns_rdatatype_ns;
 	} else
-		qname = isc_mem_strdup(mctx, curqname);
+		qname = curqname;
 }
 
 static isc_result_t
