@@ -66,8 +66,8 @@ RANDFILE=$TOP/bin/tests/system/random.data
 # v6synth
 SUBDIRS="acl additional allow_query addzone autosign builtin
 	 cacheclean case checkconf @CHECKDS@ checknames checkzone
-	 @COVERAGE@ database dlv dlvauto dlz dlzexternal dname dns64
-	 dnssec dsdigest dscp ecdsa ednscompliance emptyzones
+	 @COVERAGE@ database delv dlv dlvauto dlz dlzexternal
+         dname dns64 dnssec dsdigest dscp ecdsa ednscompliance emptyzones
 	 filter-aaaa formerr forward geoip glue gost ixfr inline
 	 limits logfileconfig lwresd masterfile masterformat metadata
 	 notify nslookup nsupdate pending @PKCS11_TEST@ redirect
